@@ -7,3 +7,4 @@ prtstat
 pslog
 pstree
 signames.h
+socket_test
