@@ -30,3 +30,23 @@ proc expect_nothing { test } {
     	eof { pass "$test" }
 	}
 }
+
+proc kill_process pid {
+    set cmdline "kill $pid"
+    if { [catch { exec /bin/sh -c $cmdline } msg]} {
+        warning "Could not kill process: $msg\n"
+    }
+}
+
+proc make_socketproc { sktpath } {
+    global topdir socketproc_pid socketproc_spawnid testsocket_path
+
+    set testproc_realpath "${topdir}/src/socket_test"
+    set socketproc_pid [ spawn $testproc_realpath $sktpath ]
+}
+
+proc kill_socketproc { } {
+    global socketproc_pid
+    kill_process $socketproc_pid
+}
+
